create hero section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,8 @@ $secondaryFont: 'Outfit', sans-serif;
 $primaryColor: #031145;
 $textColor: #fff;
 $linkHover: #ccc;
+$btn-primary-color: #7e80d7;
+$btn-border-color: #89d0d1;
 
 // reset
 * {
@@ -23,6 +25,14 @@ body {
   padding: 10px;
 }
 
+//utility margin classes
+.mx {
+  margin: 0 15px;
+}
+.my {
+  margin: 15px 0;
+}
+
 a {
   color: $textColor;
   text-decoration: none;
@@ -31,9 +41,47 @@ a {
   }
 }
 
+%btn-shared {
+  display: inline-block;
+  transition: all 0.5s;
+  border: none;
+  cursor: pointer;
+  height: 57px;
+  border-radius: 69px;
+  font-family: $primaryFont;
+  font-weight: 700;
+  font-size: inherit;
+  line-height: 28px;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  color: $textColor;
+  padding: 0.75rem 1.5rem;
+  min-width: 150px;
+  &:hover {
+    opacity: 0.9;
+    transform: scale(105%);
+  }
+}
+.btn {
+  &-primary {
+    @extend %btn-shared;
+    background-color: $btn-primary-color;
+  }
+  &-secondary {
+    @extend %btn-shared;
+    background-color: inherit;
+    border: 1px solid $btn-border-color;
+  }
+}
+
 main.container {
   max-width: 1064px;
   margin: auto;
+}
+
+.two-col-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 nav {
@@ -42,7 +90,7 @@ nav {
   justify-content: space-between;
   font-family: $secondaryFont;
 
-  h1.site-title {
+  h2.site-title {
     font-weight: 700;
     font-size: inherit;
     text-transform: uppercase;
@@ -55,5 +103,26 @@ nav {
     li {
       margin-left: 3.5rem;
     }
+  }
+}
+
+section#hero {
+  margin-top: 6rem;
+  div.col:first-of-type {
+    padding-right: 4rem;
+  }
+  h1 {
+    font-family: $primaryFont;
+    font-weight: 700;
+    font-size: 87px;
+    line-height: 110%;
+    text-transform: capitalize;
+  }
+  p {
+    margin: 1.5rem 0;
+  }
+  img {
+    width: 100%;
+    height: auto;
   }
 }
