--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@ $secondaryFont: 'Outfit', sans-serif;
 
 // colors
 $primaryColor: #031145;
+$secondaryColor: #8f8fdc;
 $textColor: #fff;
 $linkHover: #ccc;
 $btn-primary-color: #7e80d7;
@@ -41,6 +42,15 @@ a {
   }
 }
 
+h3 {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: inherit;
+  line-height: 1.4rem;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+}
+
 %btn-shared {
   display: inline-block;
   transition: all 0.5s;
@@ -51,7 +61,7 @@ a {
   font-family: $primaryFont;
   font-weight: 700;
   font-size: inherit;
-  line-height: 28px;
+  line-height: 1.4rem;
   letter-spacing: 0.08em;
   text-transform: uppercase;
   color: $textColor;
@@ -124,5 +134,26 @@ section#hero {
   img {
     width: 100%;
     height: auto;
+  }
+}
+
+section#featured-brands {
+  margin-top: 3.5rem;
+
+  .brand-logos {
+    margin-top: 1.5rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    opacity: 0.7;
+    padding: 14px 0;
+    background-color: $secondaryColor;
+    height: 80px;
+    border-radius: 10px;
+
+    img {
+      width: auto;
+      max-height: 53px;
+    }
   }
 }
