--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,6 +51,11 @@ h3 {
   text-transform: uppercase;
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 %btn-shared {
   display: inline-block;
   transition: all 0.5s;
@@ -65,7 +70,7 @@ h3 {
   letter-spacing: 0.08em;
   text-transform: uppercase;
   color: $textColor;
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 2rem;
   min-width: 150px;
   &:hover {
     opacity: 0.9;
@@ -94,6 +99,19 @@ main.container {
   grid-template-columns: 1fr 1fr;
 }
 
+.col-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.col.col-text-left {
+  padding-right: 4rem;
+}
+.col.col-text-right {
+  padding-left: 4rem;
+}
+
 nav {
   margin-top: 2rem;
   display: flex;
@@ -118,9 +136,6 @@ nav {
 
 section#hero {
   margin-top: 6rem;
-  div.col:first-of-type {
-    padding-right: 4rem;
-  }
   h1 {
     font-family: $primaryFont;
     font-weight: 700;
@@ -130,10 +145,6 @@ section#hero {
   }
   p {
     margin: 1.5rem 0;
-  }
-  img {
-    width: 100%;
-    height: auto;
   }
 }
 
@@ -155,5 +166,24 @@ section#featured-brands {
       width: auto;
       max-height: 53px;
     }
+  }
+}
+
+section.benefit {
+  margin-top: 7rem;
+
+  h3 {
+    margin-bottom: 8px;
+  }
+
+  h2 {
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 110%;
+    text-transform: capitalize;
+    margin: 15px 0;
+  }
+  p {
+    margin-bottom: 1.5rem;
   }
 }
