--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@ $secondaryFont: 'Outfit', sans-serif;
 $primaryColor: #031145;
 $secondaryColor: #8f8fdc;
 $textColor: #fff;
+$subHeadingTextColor: #b4d7dd;
 $linkHover: #ccc;
 $btn-primary-color: #7e80d7;
 $btn-border-color: #89d0d1;
@@ -42,13 +43,23 @@ a {
   }
 }
 
-h3 {
-  font-family: 'Roboto';
+h2 {
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 110%;
+  text-transform: capitalize;
+  margin: 15px 0;
+}
+
+h3,
+h4 {
+  font-family: inherit;
   font-weight: 700;
   font-size: inherit;
   line-height: 1.4rem;
   letter-spacing: 0.08em;
   text-transform: uppercase;
+  color: $subHeadingTextColor;
 }
 
 img {
@@ -175,15 +186,52 @@ section.benefit {
   h3 {
     margin-bottom: 8px;
   }
-
-  h2 {
-    font-weight: 400;
-    font-size: 50px;
-    line-height: 110%;
-    text-transform: capitalize;
-    margin: 15px 0;
-  }
   p {
     margin-bottom: 1.5rem;
+  }
+}
+
+section#testimonials {
+  margin-top: 6.5rem;
+  text-align: center;
+
+  h3 {
+    margin-bottom: 13px;
+  }
+  h2 {
+    margin-bottom: 3rem;
+  }
+  .testimonial-group {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+
+    .testimonial {
+      display: grid;
+      grid-template-rows: repeat(5, 1fr);
+    }
+
+    .testimonial-text {
+      background: #2b255f;
+      border-radius: 10px;
+      grid-row: 2 / 5;
+      grid-column: 1;
+      padding: 100px 2rem 2rem 2rem;
+
+      h4 {
+        margin: 16px 0;
+      }
+    }
+
+    img {
+      width: 165px;
+      height: 165px;
+      border-radius: 100%;
+      display: block;
+      margin: auto;
+      grid-row: 1 / 3;
+      grid-column: 1;
+      z-index: 10;
+    }
   }
 }
