--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@ $textColor: #fff;
 $subHeadingTextColor: #b4d7dd;
 $linkHover: #ccc;
 $btn-primary-color: #7e80d7;
+$btn-dark-color: #151230;
 $btn-border-color: #89d0d1;
 
 // reset
@@ -83,6 +84,7 @@ img {
   color: $textColor;
   padding: 0.75rem 2rem;
   min-width: 150px;
+  max-width: 306px;
   &:hover {
     opacity: 0.9;
     transform: scale(105%);
@@ -97,6 +99,10 @@ img {
     @extend %btn-shared;
     background-color: inherit;
     border: 1px solid $btn-border-color;
+  }
+  &-dark {
+    @extend %btn-shared;
+    background-color: $btn-dark-color;
   }
 }
 
@@ -233,5 +239,30 @@ section#testimonials {
       grid-column: 1;
       z-index: 10;
     }
+  }
+}
+
+section#call-to-action {
+  min-height: 413px;
+  background: linear-gradient(98.96deg, #b4d7dd 0%, #2b255f 100.63%);
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  h3 {
+    color: #000;
+  }
+  h2 {
+    font-size: 62px;
+    line-height: 110%;
+    font-weight: 700;
+    max-width: 465px;
+    margin: 2rem 0;
+  }
+  button {
+    width: 306px;
   }
 }
