--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,7 +25,6 @@ body {
   color: $textColor;
   font-family: $primaryFont;
   font-size: 20px;
-  padding: 10px;
 }
 
 //utility margin classes
@@ -66,6 +65,10 @@ h4 {
 img {
   width: 100%;
   height: auto;
+}
+
+ul {
+  list-style: none;
 }
 
 %btn-shared {
@@ -139,11 +142,11 @@ nav {
     font-weight: 700;
     font-size: inherit;
     text-transform: uppercase;
+    margin: 0;
   }
 
   ul {
     display: flex;
-    list-style: none;
 
     li {
       margin-left: 3.5rem;
@@ -265,4 +268,78 @@ section#call-to-action {
   button {
     width: 306px;
   }
+}
+
+footer {
+  margin: 5rem 0;
+  display: grid;
+  grid-template-columns: repeat(4, 2fr) 4fr;
+  gap: 15px;
+
+  h2.site-title {
+    font-weight: 700;
+    font-size: inherit;
+    text-transform: uppercase;
+    margin: 0;
+  }
+  h3 {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.08em;
+    color: $textColor;
+  }
+  .email-signup-heading {
+    text-transform: lowercase;
+    margin-bottom: 12px;
+    padding-left: 1rem;
+  }
+  a {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 31px;
+  }
+  form {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    input {
+      grid-row: 1;
+      grid-column: 1 / 4;
+      height: 49px;
+      background-color: #342d75;
+      color: $textColor;
+      border-radius: 80px;
+      border: none;
+      padding-left: 1rem;
+      outline: none;
+      transition: all 0.5s;
+      &::placeholder {
+        color: $textColor;
+      }
+      &:focus {
+        outline: 1px solid #7e80d7;
+      }
+    }
+    button {
+      grid-row: 1;
+      grid-column: 3 / 4;
+      background: #7e80d7;
+      color: $textColor;
+      text-transform: uppercase;
+      border-radius: 69px;
+      border: none;
+      transition: all 0.5s;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.9;
+        transform: scale(105%);
+      }
+    }
+  }
+}
+
+.graphic-line {
+  height: 14px;
+  background: linear-gradient(98.96deg, #b4d7dd 0%, #2b255f 100.63%);
 }
